--- a/xmonad-config.cabal
+++ b/xmonad-config.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0c91b05ae61b14ddaea75bdcaebd58813eafd5e028b789dae10712a45b0f4436
+-- hash: aa714893c5ed0588eaabb19bdfdbf452ba9940615b35cd0f5bab92e1508d6fda
 
 name:           xmonad-config
 version:        0.1.0.0
@@ -27,6 +27,8 @@ source-repository head
 
 library
   exposed-modules:
+      Polybar
+      StatusBarPP
       XMobar
   other-modules:
       Paths_xmonad_config
@@ -35,7 +37,7 @@ library
   build-depends:
       base >=4.7 && <5
     , time
-    , xmonad
+    , xmonad ==0.17.0
     , xmonad-contrib
   default-language: Haskell2010
 
@@ -49,7 +51,7 @@ executable xmonad-config
   build-depends:
       base >=4.7 && <5
     , time
-    , xmonad
+    , xmonad ==0.17.0
     , xmonad-config
     , xmonad-contrib
   default-language: Haskell2010
