--- a/build
+++ b/build
@@ -2,4 +2,4 @@
 
 cd ~/.xmonad
 nix build .
-ln -s ./result/bin/xmonad-config ./xmonad-x86_64-linux
+ln -sf ./result/bin/xmonad-config ./xmonad-x86_64-linux
